--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,11 @@ updates:
     schedule:
       interval: weekly
 
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: weekly
+
   - package-ecosystem: "docker" # See documentation for possible values
     directory: "/.devcontainer" # Location of package manifests
     schedule:
