--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 services:
   front:
-    hostname: ${PROJECT_NAME}_front
-    container_name: devcontainer
+    hostname: ${PROJECT_NAME}
+    container_name: ${PROJECT_NAME}
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ..:/workspace:cached
+      - .:/workspace:cached
     ports:
       - "3000:3000"
     tty: true
