build💚 コンテナの設定の修正

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "node-template",
     "dockerComposeFile": [
+        "../docker-compose.yml",
         "docker-compose.yml"
     ],
     "service": "devcontainer",
