--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.8"
 services:
-  front:
+  devcontainer:
     hostname: ${PROJECT_NAME}
     container_name: ${PROJECT_NAME}
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: .devcontainer/Dockerfile
     volumes:
       - .:/workspace:cached
     ports:
