👍feat: 最新のコンテナ設定に合わせて更新する

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,56 +1,42 @@
 {
-    "name": "node-template",
-    "dockerComposeFile": [
-        "../docker-compose.yml",
-        "docker-compose.yml"
-    ],
-    "service": "devcontainer",
-    "workspaceFolder": "/workspace",
-    "features": {
-    },
-    "postCreateCommand": "sh .devcontainer/post_create.sh",
-    "postStartCommand": "sh .devcontainer/post_start.sh ${containerWorkspaceFolder}",
-    "customizations": {
-        "vscode": {
-            "settings": {
-                "editor.guides.bracketPairs": true,
-                "editor.stickyScroll.enabled": true,
-                "editor.stickyScroll.maxLineCount": 5,
-                "workbench.colorCustomizations": {
-                    "editorStickyScroll.background": "#00708D",
-                    "editorStickyScrollHover.background": "#59A2B5"
-                },
-                "stylelint.validate": ["css"],
-                "css.validate": false,
-                "editor.codeActionsOnSave": {
-                    "source.fixAll.eslint": "explicit",
-                    "source.fixAll.stylelint": "explicit"
-                },
-                "typescript.preferences.importModuleSpecifier": "non-relative",
-                "[typescriptreact]": {
-                    "editor.defaultFormatter": "esbenp.prettier-vscode"
-                },
-                "[javascript]": {
-                    "editor.defaultFormatter": "esbenp.prettier-vscode"
-                }
-            },
-            "extensions": [
-                "ms-vscode.live-server",
-                "dbaeumer.vscode-eslint",
-                "stylelint.vscode-stylelint",
-                "esbenp.prettier-vscode",
-                "streetsidesoftware.code-spell-checker",
-                "naumovs.color-highlight",
-                "burkeholland.simple-react-snippets",
-                "formulahendry.auto-rename-tag",
-                "MariusAlchimavicius.json-to-ts",
-                "styled-components.vscode-styled-components",
-                "Gruntfuggly.todo-tree",
-                "GitHub.vscode-pull-request-github", // git graph
-                "mhutchie.git-graph", // git graph
-                "seatonjiang.gitmoji-vscode",
-                "oderwat.indent-rainbow"
-            ]
-        }
+  "name": "${localWorkspaceFolderBasename}",
+  "service": "devcontainer",
+  "workspaceFolder": "/workspace",
+  "dockerComposeFile": ["../compose.yml"],
+  "forwardPorts": [3000],
+  "postCreateCommand": "sh .devcontainer/scripts/post_create.sh",
+  "postStartCommand": "sh .devcontainer/scripts/post_start.sh ${containerWorkspaceFolder}",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "stylelint.vscode-stylelint",
+        "formulahendry.auto-rename-tag",
+        "MariusAlchimavicius.json-to-ts",
+        "styled-components.vscode-styled-components",
+        // yaml, jsonc, json, toml
+        "redhat.vscode-yaml",
+        "esbenp.prettier-vscode",
+        "tamasfe.even-better-toml",
+        // Git関連
+        "GitHub.vscode-pull-request-github",
+        "github.vscode-github-actions",
+        "mhutchie.git-graph",
+        "eamodio.gitlens",
+        "seatonjiang.gitmoji-vscode",
+        // markdown
+        "yzhang.markdown-all-in-one",
+        "DavidAnson.vscode-markdownlint",
+        "bierner.github-markdown-preview",
+        // その他
+        "streetsidesoftware.code-spell-checker",
+        "naumovs.color-highlight",
+        "Gruntfuggly.todo-tree",
+        "oderwat.indent-rainbow",
+        "ms-vscode.live-server",
+        "usernamehw.errorlens",
+        "formulahendry.code-runner"
+      ]
     }
+  }
 }
