--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-PROJECT_NAME=node_template
+DEVCONTAINTER_CONTAINER_NAME=template
+DEVCONTAINTER_HOST_NAME=template
+DEVCONTAINTER_IMAGE_NAME=template
+DEVCONTAINTER_HOST_PORT=3000
+HOST_IP=127.0.0.3
