--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,19 +3,20 @@ updates:
   - package-ecosystem: "devcontainers"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: daily
+    commit-message:
+      prefix: "build🤖 "
 
   - package-ecosystem: "docker"
+    directory: "/.devcontainer"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: "build🤖 "
+
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: weekly
-
-  - package-ecosystem: "docker" # See documentation for possible values
-    directory: "/.devcontainer" # Location of package manifests
-    schedule:
-      interval: "weekly"
-
-  - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "weekly"
+      interval: "daily"
+    commit-message:
+      prefix: "build🤖 "
